--- a/src/app/title.html
+++ b/src/app/title.html
@@ -2,9 +2,13 @@
   <h1 class="title-h1">Open Sessions</h1>
   <div>
 
+    <!--<a [routerLink]="['/cyper']" >-->
     <div class="room-row">
+         <!--(click)="roomButtonClicked('Off Tha Top')"-->
       <h1>Off Tha Top</h1>
     </div>
+
+    <!--</a>-->
 
     <div class="room-row">
       <h1>Roasts & Jokes</h1>
